test/bad/multisym-digit.fnl
(print "无为" tbl.2keyed4you)
